--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@
 #
 development:
   host: localhost
-  adapter: postgresql
+  adapter: postgis
+  postgis_extension: true
+  schema_search_path: public,postgis
   encoding: unicode
   database: Kinnisvara_development
   pool: 5
@@ -45,7 +47,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   host: localhost
-  adapter: postgresql
+  adapter: postgis
+  postgis_extension: true
+  schema_search_path: public,postgis
   encoding: unicode
   database: Kinnisvara_test
   pool: 5
